# python-ksef

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  init
.github/workflows/: publish.yml  test.yml
documentation/: mkdocs.yml  requirements.txt
documentation/docs/: index.md
documentation/docs/reference/: additional-recipients.md  invoice-annotations.md  invoice-models.md  tax-rates.md  tax-summary.md
documentation/docs/tutorials/getting-started/: authentication.md  installation.md
documentation/docs/tutorials/invoices/: downloading-invoices.md  foreign-currency.md  sending-invoices.md
documentation/site/: 404.html  index.html
documentation/site/reference/invoice-annotations/: index.html
documentation/site/reference/invoice-models/: index.html
documentation/site/search/: search_index.json
documentation/site/tutorials/getting-started/authentication/: index.html
documentation/site/tutorials/getting-started/installation/: index.html
documentation/site/tutorials/invoices/downloading-invoices/: index.html
documentation/site/tutorials/invoices/sending-invoices/: index.html
src/ksef/: __init__.py  client.py  compat.py  constants.py  encryption.py  exceptions.py  utils.py  xml_converters.py
src/ksef/auth/: __init__.py  base.py  init_session_token_request.py  token.py  xades.py
src/ksef/models/: __init__.py  invoice.py  invoice_annotations.py  invoice_rows.py
src/ksef/models/responses/: __init__.py  auth.py  authorization_challenge.py  authorization_token.py  session.py
tests/: __init__.py  conftest.py  test_client_invoices.py  test_encryption.py  test_import.py  test_utils.py
tests/auth/: __init__.py  test_token.py  test_xades.py
tests/integration/: README.md  conftest.py
tests/integration/auth/: __init__.py  test_token_auth.py  test_xades_auth.py
tests/integration/invoices/: __init__.py  test_search_invoices.py  test_send_invoice.py
tests/xml_converters/: __init__.py  test_convert_invoice_to_xml.py
tests/xml_converters/resources/: invoice.xml  invoice_without_apartment.xml
