[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ksef"
version = "0.1.1"
description = "Python interface for the KSEF API"
authors = [{ name = "Jakub Szafrański", email = "kontakt@samu.pl" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "pydantic>=1.10.5,<2",
    "requests>=2.28.2,<3",
    "cryptography>=46.0.2",
]

[project.urls]
Repository = "https://github.com/samupl/python-ksef"

[dependency-groups]
dev = [
    "setuptools",
    "absolufy-imports>=0.3.1,<0.4",
    "black>=22.12.0,<23",
    "commitizen>=2.42.1,<3",
    "coverage[toml]>=7.2.1,<8",
    "mypy>=1.0.1,<2",
    "poethepoet>=0.18.1,<0.19",
    "pre-commit>=4.3.0,<5",
    "pytest>=7.2.2,<8",
    "pytest-clarity>=1.0.1,<2",
    "pytest-mock>=3.10.0,<4",
    "pytest-xdist>=3.2.0,<4",
    "ruff>=0.0.254,<0.0.255",
    "safety>=2.3.5,<3",
    "shellcheck-py>=0.9.0,<0.10",
    "typeguard>=2.13.3,<3",
    "types-requests>=2.28.11.15,<3",
    "responses>=0.25.8",
    "pytest-responses>=0.5.1,<0.6",
    "cruft>=2.12.0,<3",
    "pdoc>=13.0.0,<14",
    "bs4>=0.0.2,<0.0.3",
    "lxml>=5.1.0,<6",
    "cython<3.0.0",
    "pyyaml==5.3.1",  # Pinned because of ...
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.5.2,<10",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]
# no-build-isolation-package = ["pyyaml", "cython"]

[tool.commitizen]
bump_message = "bump(release): v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version = "0.1.0"
version_files = ["pyproject.toml:version"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.coverage.report]
fail_under = 50
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.mypy]
junit_xml = "reports/mypy.xml"
plugins = "pydantic.mypy"
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
disallow_untyped_calls = false
ignore_missing_imports = true
pretty = false
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
exclude = [
  "^tests/*"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --typeguard-packages=ksef --verbosity=2 --junitxml=reports/pytest.xml"
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["src", "tests"]
xfail_strict = true

[tool.ruff]
fix = true
ignore-init-module-imports = true
line-length = 100
select = ["A", "B", "BLE", "C4", "C90", "D", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
ignore = ["E501", "PGH001", "RET504", "S101"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]
src = ["src", "tests"]
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.poe.tasks.docs]
  help = "Generate this package's docs"
  cmd = """
    pdoc
      --docformat $docformat
      --output-directory $outputdirectory
      ksef
    """

[[tool.poe.tasks.docs.args]]
    help = "The docstring style (default: numpy)"
    name = "docformat"
    options = ["--docformat"]
    default = "numpy"

[[tool.poe.tasks.docs.args]]
    help = "The output directory (default: docs)"
    name = "outputdirectory"
    options = ["--output-directory"]
    default = "docs"
